--- a/src/css/index.css
+++ b/src/css/index.css
@@ -82,3 +82,13 @@
 .icon-yanzhengma:before {
   content: "\e603";
 }
+body {
+  background-color: #f5f7f9;
+}
+.page-nav-bar {
+  background-color: #3296fa;
+}
+.page-nav-bar .van-nav-bar__title,
+.page-nav-bar .van-icon {
+  color: #fff;
+}
