--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,16 @@
 // 全局样式文件
 // 加载字体图标
 @import './iconfont.less';
+
+body {
+    background-color: #f5f7f9;
+}
+
+.page-nav-bar {
+    background-color: #3296fa;
+
+    .van-nav-bar__title,
+    .van-icon {
+        color: #fff;
+    }
+}
